--- a/index.html
+++ b/index.html
@@ -34,38 +34,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/manifest.json">
-
-  <style>
-    .cookie-banner {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-    }
-
-    .cookie-banner a {
-      color: var(--text-color);
-    }
-
-    /* Für den Light Mode */
-    :root {
-      --bg-color: #f8f9fa;
-      --text-color: #343a40;
-    }
-
-    .cookie-banner {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background-color: #000000; /* 90% Deckkraft */
-      color: var(--text-color);
-      z-index: 1000;
-    }
-
-    [data-theme="dark"] .cookie-banner {
-      background-color: rgba(52, 58, 64, 0.9); /* 90% Deckkraft im dunklen Modus */
-    }
-
-
-  </style>
+  <link rel="stylesheet" href="css/index.css">
 
 </head>
 
