--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/manifest.json">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/popup.css">
+  <script src="css/popup.js"></script>
 
 </head>
 
@@ -103,6 +105,20 @@
     Skriza is in its pivotal development phase. We're inviting visionary investors to be part of this transformative
     journey in reshaping online opinion sharing.
   </p>
+
+  <div class="hacktoberfest-popup" id="hacktoberfestPopup">
+    <div class="hacktoberfest-content">
+      <span class="close" id="closePopup">&times;</span>
+      <a href="/hacktober">
+        <img src="img/hacktoberfest_skriza.png" class="hacktoberfestpopupimg" alt="Hacktoberfest 2023 with Skriza">
+      </a>
+      <p>Contribute to the future of meaningful online discussions.</p>
+      <a href="https://skriza.com/hacktoberfest2023" target="_blank" rel="noopener">Learn More</a>
+    </div>
+  </div>
+
+
+
 
   <div class="skrsocial social-links">
     <a href="https://github.com/yusuf57rl/skriza" target="_blank" class="btn btn-dark"><i class="fab fa-github"></i>
