--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <a class="nav-link" href="/introduction"><i class="fas fa-info-circle"></i> Introduction</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/hacktober"><i class="fas fa-info-circle"></i> Hacktober</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="mailto:contact@skriza.com"><i class="fas fa-envelope"></i> Contact Us</a>
       </li>
       <li class="nav-item">
@@ -105,19 +108,6 @@
     Skriza is in its pivotal development phase. We're inviting visionary investors to be part of this transformative
     journey in reshaping online opinion sharing.
   </p>
-
-  <div class="hacktoberfest-popup" id="hacktoberfestPopup">
-    <div class="hacktoberfest-content">
-      <span class="close" id="closePopup">&times;</span>
-      <a href="/hacktober">
-        <img src="img/hacktoberfest_skriza_2023.png" class="hacktoberfestpopupimg" alt="Hacktoberfest 2023 with Skriza">
-      </a>
-      <p>Contribute to the future of meaningful online discussions.</p>
-      <a href="https://skriza.com/hacktoberfest2023" target="_blank" rel="noopener">Learn More</a>
-    </div>
-  </div>
-
-
 
 
   <div class="skrsocial social-links">
