--- a/introduction.html
+++ b/introduction.html
@@ -35,6 +35,9 @@
         <a class="nav-link" href="/introduction"><i class="fas fa-info-circle"></i> Introduction</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/hacktober"><i class="fas fa-info-circle"></i> Hacktober</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="mailto:contact@skriza.com"><i class="fas fa-envelope"></i> Contact Us</a>
       </li>
       <li class="nav-item">
